infra/rhoai/gateway/openshift-ai-inference.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    istio.io/rev: openshift-gateway
  name: openshift-ai-inference
  namespace: openshift-ingress
spec:
  gatewayClassName: openshift-default
  infrastructure:
    labels:
      serving.kserve.io/gateway: kserve-ingress-gateway
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
  addresses:
  - type: IPAddress
    value: 10.240.252.80
